# agent-sommelier

./: .gitignore  README.md  pyproject.toml  reinstall.ps1
agent_chat/: design_tasks_2026-05-10.md  plan_bg_immediate_fire_and_forget_2026-04-07.md  plan_bg_launch_timeout_2026-04-07.md  plan_bg_running_until_failed_2026-04-08.md  plan_close_refactor_2026-05-10.md  plan_crony_cwd_cron_2026-05-14.md  plan_tasks_2026-05-10.md
docs/: arch.md  product.md  spec.md
skills/artify/: SKILL.md
skills/artify/references/: d3-browser-guide.md  graphviz-browser-guide.md  infographic-design-principles.md  libraries-cheatsheet.md  markmap-browser-guide.md  mermaid-browser-guide.md  revealjs-browser-guide.md  slides-design-principles.md  starter-catalog.md
skills/artify/scripts/: make-offline.ps1  make-offline.py
skills/artify/templates/: architecture.html  base.html  chartjs.html  comparison.html  d3.html  flowchart.html  gantt.html  graphviz-editor.html  graphviz.html  markmap-minimal.html  markmap.html  mermaid-editor.html  mermaid.html  mindmap.html  rich-base.html  svg.html  table.html  timeline.html
skills/batch-task-executor/: SKILL.md
skills/batch-task-executor/references/: coordinator.md  execution.md  intake.md  results.md
skills/batch-task-executor/templates/: batch-plan.md
skills/bg-jobs/: SKILL.md
skills/calm-down/: SKILL.md
skills/crony/: SKILL.md
skills/desktop-notifications/: SKILL.md
skills/edge-tts/: SKILL.md
skills/edge-tts/references/: advanced.md  say-script.md
skills/engage/: SKILL.md
skills/engage/references/: completion.md
skills/essh/: SKILL.md
skills/memory-bank/: SKILL.md
skills/memory-bank/references/: dream-mode.md
skills/memory-bank/scripts/: index.py  init.py
skills/memory-bank/templates/: decision.md  dream-prompt.md  episodic.md  person.md  procedural.md  project.md  semantic.md
skills/memory-bank/tests/: test_compression.py
skills/screenshot/: SKILL.md
skills/skill-store/: SKILL.md
skills/skill-store/references/: creating.md  importing.md  install.md  (+2 more)
skills/task-system/: SKILL.md
skills/tmux/: SKILL.md
src/agent_sommelier/: __init__.py  amun.py  artify.py  bg.py  crony.py  essh.py  notify.py  screenshot.py  skill_store.py  tasks.py  tmx.py
src/agentcli_helpers/: __init__.py  crony.py  skill_store.py  tasks.py
tests/: test_artify.py  test_bg_redesign.py  test_essh.py  test_skill_store.py  test_tasks.py
(+83 files in other folders)
