[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-sommelier-cli"
version = "1.2.9"
description = "A capability sommelier for your coding agent — tools, skills, memory, tasks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pillow>=10.0.0",
    "psutil>=6.0.0",
    "pyyaml>=6.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
crony = [
    "dateparser>=1.2.0",
    "croniter>=3.0.0",
    "schedule>=1.2.0",
]
screenshot = [
    "mss>=9.0.0",
    "pillow>=10.0.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "watchfiles>=1.0.0",
]
mcp-srv = [
    "mcp>=1.0.0",
]
all = [
    "agent-sommelier-cli[crony,screenshot,web,mcp-srv]",
]

[project.scripts]
crony = "agent_sommelier.crony:main"
essh = "agent_sommelier.essh:main"
notify = "agent_sommelier.notify:main"
bg = "agent_sommelier.bg:main"
screenshot = "agent_sommelier.screenshot:main"
tasks = "agent_sommelier.tasks:main"
skill-store = "agent_sommelier.skill_store.cli:main"
skill-store-mcp = "agent_sommelier.skill_store.mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_sommelier"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "agent-sommelier-cli[web]",
]
